--- a/costmaps/base_local_planner_params.yaml
+++ b/costmaps/base_local_planner_params.yaml
@@ -1,11 +1,13 @@
 TrajectoryPlannerROS:
-  max_vel_x: 0.55
+  max_vel_x: 0.4
   min_vel_x: 0
   holonomic_robot: false
-  max_rotational_vel: 2.0
-  min_rotational_vel: -2.0
+  max_rotational_vel: 1.5
+  min_rotational_vel: -1.5
   min_in_place_rotational_vel: 0.4
-  path_distance_bias: 60
-  acc_lim_th: 3.5
+  max_in_place_rotational_vel: 1.5
+  pdist_scale: 3
+  vx_samples: 20
+  acc_lim_theta: 3.5
   acc_lim_x: 0.5
   acc_lim_y: 0.5
