--- a/slam_robot/package.xml
+++ b/slam_robot/package.xml
@@ -39,25 +39,6 @@
   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>roscpp</build_depend>
   <build_depend>rospy</build_depend>
-  <build_depend>message_generation</build_depend>
-  <run_depend>message_runtime</run_depend>
-  <run_depend>roscpp</run_depend>
-  <run_depend>robot_state_publisher</run_depend>
-  <run_depend>gmapping</run_depend>
-  <run_depend>rospy</run_depend>
-  <run_depend>rospy</run_depend>
-  <run_depend>xacro</run_depend>
-  <run_depend>RosAria</run_depend>
-  <run_depend>p2os_urdf</run_depend>
-  <run_depend>hokuyo_node</run_depend>
+  <build_depend>geometry_msgs</build_depend>
 
-
-  <!-- The export tag contains other, unspecified, tags -->
-  <export>
-    <!-- You can specify that this package is a metapackage here: -->
-    <!-- <metapackage/> -->
-
-    <!-- Other tools can request additional information be placed here -->
-
-  </export>
 </package>
