--- a/slam_robot/costmaps/base_local_planner_params.yaml
+++ b/slam_robot/costmaps/base_local_planner_params.yaml
@@ -1,13 +1,28 @@
-TrajectoryPlannerROS:
-  max_vel_x: 0.4
-  min_vel_x: 0
-  holonomic_robot: false
-  max_rotational_vel: 1.5
-  min_rotational_vel: -1.5
-  min_in_place_rotational_vel: 0.4
-  max_in_place_rotational_vel: 1.5
-  pdist_scale: 3
-  vx_samples: 20
-  acc_lim_theta: 3.5
-  acc_lim_x: 0.5
-  acc_lim_y: 0.5
+TrajectoryPlannerDiffROS:  
+    acc_lim_theta: 3.2
+    acc_lim_x: 2.5
+    acc_lim_y: 2.5
+    angular_sim_granularity: 0.025
+    dwa: false
+    escape_reset_dist: 0.1
+    escape_reset_theta: 1.57079632679
+    escape_vel: -0.1
+    gdist_scale: 0.8
+    heading_lookahead: 0.325
+    heading_scoring: false
+    heading_scoring_timestep: 0.1
+    holonomic_robot: false
+    max_vel_theta: 1.0
+    max_vel_x: 0.55
+    min_in_place_vel_theta: 0.4
+    min_vel_theta: -1.0
+    min_vel_x: 0.0
+    occdist_scale: 0.01
+    oscillation_reset_dist: 0.05
+    pdist_scale: 0.6
+    restore_defaults: false
+    sim_granularity: 0.025
+    sim_time: 1.7
+    simple_attractor: false
+    vtheta_samples: 20
+    vx_samples: 20
