--- a/slam_robot/package.xml
+++ b/slam_robot/package.xml
@@ -40,5 +40,7 @@
   <build_depend>roscpp</build_depend>
   <build_depend>rospy</build_depend>
   <build_depend>geometry_msgs</build_depend>
+  <run_depend>opencv2</run_depend>
+  <run_depend>cv_bridge</run_depend>
 
 </package>
