--- a/exploration/package.xml
+++ b/exploration/package.xml
@@ -21,7 +21,9 @@
   <build_depend>geometry_msgs</build_depend>
   <build_depend>nav_msgs</build_depend>
   <build_depend>visualization_msgs</build_depend>
+  <build_depend>message_generation</build_depend>
 
+  <run_depend>message_runtime</run_depend>
   <run_depend>roscpp</run_depend>
   <run_depend>tf</run_depend>
   <run_depend>pluginlib</run_depend>
