--- a/exploration/CMakeLists.txt
+++ b/exploration/CMakeLists.txt
@@ -53,5 +53,5 @@ include_directories(
   ${nav_msgs_INCLUDE_DIRS}
   ${tf_INCLUDE_DIRS}
 )
-add_executable(exploration src/Exploration.cpp src/Frontier.cpp)
-target_link_libraries(exploration ${catkin_LIBRARIES})
+add_executable(frontier_finder src/FrontierFinder.cpp src/Frontier.cpp)
+target_link_libraries(frontier_finder ${catkin_LIBRARIES})
