created basic custom path finding algorithm

--- a/slam_robot/params/planner_params.yaml
+++ b/slam_robot/params/planner_params.yaml
@@ -1,4 +1,5 @@
 base_local_planner: trajectory_planner_diff/TrajectoryPlannerDiffROS
+base_global_planner: global_plannerx/GlobalPlanner
 controller_frequency: 15
 
 TrajectoryPlannerDiffROS:
