--- a/slam_robot/params/costmap_common_params.yaml
+++ b/slam_robot/params/costmap_common_params.yaml
@@ -2,7 +2,7 @@ obstacle_range: 2.5
 raytrace_range: 3.0
 #footprint: [ [0.3302, -0.0508], [0.254, -0.0508], [0.254, -0.254], [-0.254, -0.254], [-0.254, 0.254], [0.254, 0.254], [0.254, 0.0508], [0.3302, 0.0508] ]
 footprint: [[0.1825, 0.0], [0.052500000000000005, 0.1905], [-0.0775, 0.1905], [-0.1175, 0.14550000000000002], [-0.2025, 0.14550000000000002], [-0.2725, 0.0], [-0.2025, -0.14550000000000002], [-0.1175, -0.14550000000000002], [-0.0775, -0.1905], [0.052500000000000005, -0.1905]]
-
+track_unknown_space: true
 inflation_radius: 1
 
 observation_sources: laser_scan_sensor
@@ -14,3 +14,6 @@ laser_scan_sensor: {
   marking: true,
   clearing: true
 }
+
+obstacle_layer:
+  track_unknown_space: true
