--- a/exploration/package.xml
+++ b/exploration/package.xml
@@ -22,6 +22,7 @@
   <build_depend>visualization_msgs</build_depend>
   <build_depend>message_generation</build_depend>
 
+  <run_depend>message_generation</run_depend>
   <run_depend>message_runtime</run_depend>
   <run_depend>roscpp</run_depend>
   <run_depend>tf</run_depend>
