--- a/slam_robot/params/dynamic_global_costmap_params.yaml
+++ b/slam_robot/params/dynamic_global_costmap_params.yaml
@@ -2,6 +2,7 @@ global_costmap:
   global_frame: /map
   robot_base_frame: base_link
   update_frequency: 5.0
+  publish_frequency: 1.0
   static_map: false
   rolling_window: true
   width: 50
